--- a/src/App.css
+++ b/src/App.css
@@ -47,6 +47,7 @@ a:hover{
 .logo-container{
     background-color: #001529;
     display: flex;
+    justify-content: space-between;
     padding: 20px;
     align-items: center;
     width: 100%;
